--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bson": "^0.4.21",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
     "mongodb": "^1.4.40",
     "mongoose": "^4.3.6",
     "slackbots": "^0.5.1"
